# Invest-Notify

./: .env.example  .gitignore  Makefile  README.md  justfile  main.py  pyproject.toml
config/: app.yaml  stock.csv  stock.example.csv  stocks.example.yaml  stocks.yaml
scripts/: get_user_id.py
src/invest_notify/: __init__.py  cli.py  scheduler.py  settings.py
src/invest_notify/analysis/: __init__.py  trend.py
src/invest_notify/data_source/: __init__.py  tw_stock.py  us_stock.py
src/invest_notify/notifications/: __init__.py  line.py
src/invest_notify/reporting/: daily_table.py
src/invest_notify/storage/: reader.py  schema.py  sqlite_store.py  writer.py
src/invest_notify/utils/: logger.py  timeutil.py
src/invest_notify/visualization/: trend_plot.py
tests/: test_data_source.py  test_plot.py  test_settings.py  test_sqlite_store.py  test_table_report.py  test_trend.py
